--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,250 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Каталог</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+<div class="row g-0 text-center">
+    <div class="col-3 d-flex">
+        <div class="alert alert-dark mb-0" role="alert" style="background-color: #212529; color: #fff; border: none;">
+            <nav class="navbar bg-dark" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="#">
+                        <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-white.svg"
+                             alt="Bootstrap Logo" width="50" height="30" class="d-inline-block align-text-top">
+                        Меню
+                    </a>
+                </div>
+            </nav>
+            <hr>
+            <ul class="nav flex-column nav-pills me-3" id="pills-tab" role="tablist" style="padding: 10px">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white"
+                            id="pills-home-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-house-door" viewBox="0 0 16 16">
+                            <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z"/>
+                        </svg>
+                        Главная
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white"
+                            id="pills-categories-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-categories" type="button" role="tab"
+                            aria-controls="pills-categories"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-speedometer2" viewBox="0 0 16 16">
+                            <path d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4M3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707M2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10m9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5m.754-4.246a.39.39 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.39.39 0 0 0-.029-.518z"/>
+                            <path fill-rule="evenodd"
+                                  d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A8 8 0 0 1 0 10m8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3"/>
+                        </svg>
+                        Категории
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" style="width: 250px; text-align: left; color: white" id="pills-orders-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-orders" type="button" role="tab" aria-controls="pills-orders"
+                            aria-selected="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-table" viewBox="0 0 16 16">
+                            <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 2h-4v3h4zm0 4h-4v3h4zm0 4h-4v3h3a1 1 0 0 0 1-1zm-5 3v-3H6v3zm-5 0v-3H1v2a1 1 0 0 0 1 1zm-4-4h4V8H1zm0-4h4V4H1zm5-3v3h4V4zm4 4H6v3h4z"/>
+                        </svg>
+                        Заказы
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white" id="pills-contact-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-contact" type="button" role="tab"
+                            aria-controls="pills-contact"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd"
+                                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                        Контакты
+                    </button>
+                </li>
+            </ul>
+            <div class="dropdown" style="margin-top: 500px; text-align: left">
+                <hr>
+                <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                    <img src="https://i.pinimg.com/736x/5b/cc/de/5bccde9918e17ca3b2926a2b21a113cf.jpg" alt="mdo"
+                         width="24" height="24" class="rounded-circle">
+                    Пользователь
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark dropdown text-white">
+                    <li><a class="dropdown-item text-white" href="#">Профиль</a></li>
+                    <li><a class="dropdown-item text-white" href="#">Выход</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="col-9">
+        <div class="container text-center">
+            <h1>Каталог</h1>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card" style="margin: 50px">
+                        <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top" height="140"
+                             preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                             xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#99a3b0"></rect>
+                            <text x="50%" y="50%" fill="#ffffff" dy="0" font-size="16"
+                                  text-anchor="middle"
+                                  dominant-baseline="middle">Thumbnail
+                            </text>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: left">This is a wider card with supporting text
+                                below as a natural lead-in to
+                                additional content. This content is a
+                                little bit longer.</p>
+                            <div class="container text-center">
+                                <div class="row align-items-end">
+                                    <div class="col">
+                                        <div class="btn-group" style="text-align: left" role="group"
+                                             aria-label="Basic outlined example">
+                                            <button type="button" class="btn btn-outline-secondary">View</button>
+                                            <button type="button" class="btn btn-outline-secondary">Edit</button>
+                                        </div>
+                                    </div>
+                                    <div class="col"></div>
+                                    <div class="col">
+                                        <p class="card-text" style="text-align: right"><small
+                                                class="text-body-secondary">9
+                                            mins</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="margin: 50px">
+                        <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top" height="140"
+                             preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                             xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#99a3b0"></rect>
+                            <text x="50%" y="50%" fill="#ffffff" dy="0" font-size="16"
+                                  text-anchor="middle"
+                                  dominant-baseline="middle">Thumbnail
+                            </text>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: left">This is a wider card with supporting text
+                                below as a natural lead-in to
+                                additional content. This content is a
+                                little bit longer.</p>
+                            <div class="container text-center">
+                                <div class="row align-items-end">
+                                    <div class="col">
+                                        <div class="btn-group" style="text-align: left" role="group"
+                                             aria-label="Basic outlined example">
+                                            <button type="button" class="btn btn-outline-secondary">View</button>
+                                            <button type="button" class="btn btn-outline-secondary">Edit</button>
+                                        </div>
+                                    </div>
+                                    <div class="col"></div>
+                                    <div class="col">
+                                        <p class="card-text" style="text-align: right"><small
+                                                class="text-body-secondary">9
+                                            mins</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="margin: 50px">
+                        <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top" height="140"
+                             preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                             xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#99a3b0"></rect>
+                            <text x="50%" y="50%" fill="#ffffff" dy="0" font-size="16"
+                                  text-anchor="middle"
+                                  dominant-baseline="middle">Thumbnail
+                            </text>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: left">This is a wider card with supporting text
+                                below as a natural lead-in to
+                                additional content. This content is a
+                                little bit longer.</p>
+                            <div class="container text-center">
+                                <div class="row align-items-end">
+                                    <div class="col">
+                                        <div class="btn-group" style="text-align: left" role="group"
+                                             aria-label="Basic outlined example">
+                                            <button type="button" class="btn btn-outline-secondary">View</button>
+                                            <button type="button" class="btn btn-outline-secondary">Edit</button>
+                                        </div>
+                                    </div>
+                                    <div class="col"></div>
+                                    <div class="col">
+                                        <p class="card-text" style="text-align: right"><small
+                                                class="text-body-secondary">9
+                                            mins</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="margin: 50px">
+                        <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top" height="140"
+                             preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                             xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#99a3b0"></rect>
+                            <text x="50%" y="50%" fill="#ffffff" dy="0" font-size="16"
+                                  text-anchor="middle"
+                                  dominant-baseline="middle">Thumbnail
+                            </text>
+                        </svg>
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: left">This is a wider card with supporting text
+                                below as a natural lead-in to
+                                additional content. This content is a
+                                little bit longer.</p>
+                            <div class="container text-center">
+                                <div class="row align-items-end">
+                                    <div class="col">
+                                        <div class="btn-group" style="text-align: left" role="group"
+                                             aria-label="Basic outlined example">
+                                            <button type="button" class="btn btn-outline-secondary">View</button>
+                                            <button type="button" class="btn btn-outline-secondary">Edit</button>
+                                        </div>
+                                    </div>
+                                    <div class="col"></div>
+                                    <div class="col">
+                                        <p class="card-text" style="text-align: right"><small
+                                                class="text-body-secondary">9
+                                            mins</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
