--- a/contacts.html
+++ b/contacts.html
@@ -1,10 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Контакты</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+<div class="row g-0 min-vh-100">
+    <div class="col-3 d-flex">
+        <div class="alert alert-dark mb-0" role="alert" style="background-color: #212529; color: #fff; border: none;">
+            <nav class="navbar bg-dark" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="#">
+                        <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-white.svg"
+                             alt="Bootstrap Logo" width="50" height="30" class="d-inline-block align-text-top">
+                        Меню
+                    </a>
+                </div>
+            </nav>
+            <hr>
+            <ul class="nav flex-column nav-pills me-3" id="pills-tab" role="tablist" style="padding: 10px">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white"
+                            id="pills-home-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-house-door" viewBox="0 0 16 16">
+                            <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z"/>
+                        </svg>
+                        Главная
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white"
+                            id="pills-categories-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-categories" type="button" role="tab"
+                            aria-controls="pills-categories"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-speedometer2" viewBox="0 0 16 16">
+                            <path d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4M3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707M2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10m9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5m.754-4.246a.39.39 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.39.39 0 0 0-.029-.518z"/>
+                            <path fill-rule="evenodd"
+                                  d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A8 8 0 0 1 0 10m8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3"/>
+                        </svg>
+                        Категории
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" style="width: 250px; text-align: left; color: white" id="pills-orders-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-orders" type="button" role="tab" aria-controls="pills-orders"
+                            aria-selected="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-table" viewBox="0 0 16 16">
+                            <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 2h-4v3h4zm0 4h-4v3h4zm0 4h-4v3h3a1 1 0 0 0 1-1zm-5 3v-3H6v3zm-5 0v-3H1v2a1 1 0 0 0 1 1zm-4-4h4V8H1zm0-4h4V4H1zm5-3v3h4V4zm4 4H6v3h4z"/>
+                        </svg>
+                        Заказы
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" style="width: 250px; text-align: left; color: white"
+                            id="pills-contact-tab"
+                            data-bs-toggle="pill"
+                            data-bs-target="#pills-contact" type="button" role="tab"
+                            aria-controls="pills-contact"
+                            aria-selected="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd"
+                                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                        Контакты
+                    </button>
+                </li>
+            </ul>
+            <div class="dropdown" style="margin-top: 350px; text-align: left">
+                <hr>
+                <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                    <img src="https://i.pinimg.com/736x/5b/cc/de/5bccde9918e17ca3b2926a2b21a113cf.jpg" alt="mdo"
+                         width="24" height="24" class="rounded-circle">
+                    Пользователь
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark dropdown text-white">
+                    <li><a class="dropdown-item text-white" href="#">Профиль</a></li>
+                    <li><a class="dropdown-item text-white" href="#">Выход</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="col-9">
+        <div class="container text-center" style="margin: 50px">
+            <h1>Контакты</h1>
+            <div class="container text-center" style="margin: 70px">
+                <div class="row">
+                    <div class="col-sm-5 col-md-6" style="text-align: left">
+                        <div class="card" style="width: 30rem; padding: 10px">
+                            <div class="card-body">
+                                <form method="post" action="/">
+                                    <label for="validationCustom01" class="form-label">Имя</label>
+                                    <input type="text" class="form-control" id="validationCustom01" name="name"
+                                           required>
 
+                                    <label for="email-input" class="form-label">Почта</label>
+                                    <div class="input-group flex-nowrap">
+                                        <span class="input-group-text" id="addon-wrapping">@</span>
+                                        <input type="email" class="form-control" id="email-input" name="email"
+                                               aria-label="Почта" aria-describedby="addon-wrapping">
+                                    </div>
+
+                                    <div class="mb-3 text-start">
+                                        <label for="exampleFormControlTextarea1" class="form-label">Сообщение</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" name="message"
+                                                  rows="3"></textarea>
+                                    </div>
+
+                                    <button class="btn btn-primary" type="submit">Отправить</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="text-align: left">
+                        <h5><strong>Наши контакты</strong></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                            est laborum.</p>
+                        <p>While these feedback styles cannot be styled with CSS, you can still
+                            customize the feedback text through JavaScript.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
